1秒クロックをモジュール化

--- a/CLOCK1.qsf
+++ b/CLOCK1.qsf
@@ -508,6 +508,7 @@ set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name VERILOG_FILE HDL/cnt1sec.v
 set_global_assignment -name VERILOG_FILE HDL/seg7dec.v
 set_global_assignment -name SDC_FILE clock1.sdc
 set_global_assignment -name VERILOG_FILE HDL/clock1.v
